# CNSistent

./: .gitignore  CHANGELOG.md  README.md  REPOSITORY.md  example_API.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  python-test.yml
cns/: cnsistent.py  data_utils.py  pipelines.py  segment.py
cns/analyze/: aneuploidy.py  plot.py
cns/process/: aggregation.py  breakpoints.py  imputation.py  segments.py
cns/utils/: assemblies.py  conversions.py  files.py  fragile_sites.py  selection.py
data/: HumCFS_fragile_sites.bed
docs/source/: CLI.rst  index.rst  manual.rst  plotting.ipynb  quickstart.rst
docs/source/files/: cns_imp_df.tex
notebooks/: analyze_CN_clipping.ipynb  analyze_break_clusters.ipynb  analyze_coverage.ipynb  analyze_distances.ipynb  analyze_features.ipynb  analyze_fragile_sites.ipynb  analyze_lung.ipynb  analyze_peaks.ipynb  analyze_segs_vs_genes.ipynb  analyze_types.ipynb  docs_illustrations.ipynb  docs_knee_detection.ipynb  docs_runtime.ipynb  simulate_SOX2_selection.ipynb
scripts/: build_fragile_sites.py  data_aggregate.sh  data_process.sh
tests/: test_process.py
