[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CNSistent"
version = "1.0.0"
authors = [
    {name = "Adam Streck", email = "adam.streck@gmail.com"}
]
maintainers = [
    {name = "Adam Streck", email = "adam.streck@gmail.com"}
]
description = "Tools for imputation, segmentation, analysis, and plotting of Copy Number Segments (CNS)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["bioinformatics", "genomics", "copy number segments", "CNS"]
dependencies = [
    "pandas>=2.2",
    "numpy",
    "matplotlib",
    "numba"
]

[project.scripts]
cns = "cns.cnsistent:main"
segment = "cns.segment:main"

[tool.hatch.build.targets.wheel]
include = ["cns/cnsistent.py", "cns/**/*.py"]
exclude = ["cns/data_utils.py", "data/**", "notebooks/**", "scripts/**", "tests/**", "docs/**", "example_API.py", "example_CLI.sh", ".readthedocs.yaml", "cnsistent.yml", "scratch.py"]